// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checks that CatalogCard snapshot don't change > renders correctly agreement DRAFT 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1j1g2lg-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <div
            class="css-1hci2t4-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-overline css-idy08m-MuiTypography-root"
            >
              eserviceCardLabel
            </span>
            <span
              class="css-16f3kn9"
            >
              draftRequest
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1ddsn86-MuiCardContent-root"
      >
        <div
          class="css-1q36rmd-MuiStack-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ax6k3r-MuiAvatar-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-7p6gym-MuiSvgIcon-root"
              data-testid="AccountBalanceIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10h3v7H4zm6.5 0h3v7h-3zM2 19h20v3H2zm15-9h3v7h-3zm-5-9L2 6v2h20V6z"
              />
            </svg>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
          >
            Agenzia per L'Italia Digitale
          </span>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1pcitua-MuiTypography-root"
        >
          !! -- CAMMELLO -- Test 18/10 [1]
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
        >
          <p
            style="display: -webkit-box; overflow: hidden;"
          >
            lorem ipsum
          </p>
        </div>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-17m1olt-MuiCardActions-root"
      >
        <div
          class="css-e53awj-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span>
              actions.inspect
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            editDraft
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that CatalogCard snapshot don't change > renders correctly the skeleton 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-x2pee1-MuiSkeleton-root"
      style="height: 410px;"
    />
  </div>
</body>
`;

exports[`Checks that CatalogCard snapshot don't change > renders correctly with isMine false and agreement ACTIVE 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1j1g2lg-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <div
            class="css-1hci2t4-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-overline css-idy08m-MuiTypography-root"
            >
              eserviceCardLabel
            </span>
            <span
              class="css-1k8a9y0"
            >
              requestCompleted
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1ddsn86-MuiCardContent-root"
      >
        <div
          class="css-1q36rmd-MuiStack-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ax6k3r-MuiAvatar-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-7p6gym-MuiSvgIcon-root"
              data-testid="AccountBalanceIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10h3v7H4zm6.5 0h3v7h-3zM2 19h20v3H2zm15-9h3v7h-3zm-5-9L2 6v2h20V6z"
              />
            </svg>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
          >
            Agenzia per L'Italia Digitale
          </span>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1pcitua-MuiTypography-root"
        >
          !! -- CAMMELLO -- Test 18/10 [1]
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
        >
          <p
            style="display: -webkit-box; overflow: hidden;"
          >
            lorem ipsum
          </p>
        </div>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-17m1olt-MuiCardActions-root"
      >
        <div
          class="css-e53awj-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span>
              actions.inspect
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            handleRequest
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that CatalogCard snapshot don't change > renders correctly with isMine false and hasCertifiedAttributes false 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1j1g2lg-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <div
            class="css-1hci2t4-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-overline css-idy08m-MuiTypography-root"
            >
              myEserviceCardLabel
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1ddsn86-MuiCardContent-root"
      >
        <div
          class="css-1q36rmd-MuiStack-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ax6k3r-MuiAvatar-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-7p6gym-MuiSvgIcon-root"
              data-testid="AccountBalanceIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10h3v7H4zm6.5 0h3v7h-3zM2 19h20v3H2zm15-9h3v7h-3zm-5-9L2 6v2h20V6z"
              />
            </svg>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
          >
            Agenzia per L'Italia Digitale
          </span>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1pcitua-MuiTypography-root"
        >
          !! -- CAMMELLO -- Test 18/10 [1]
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
        >
          <p
            style="display: -webkit-box; overflow: hidden;"
          >
            lorem ipsum
          </p>
        </div>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-17m1olt-MuiCardActions-root"
      >
        <div
          class="css-e53awj-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span>
              actions.inspect
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            subscribe
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that CatalogCard snapshot don't change > renders correctly with isMine false and hasCertifiedAttributes true 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1j1g2lg-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <div
            class="css-1hci2t4-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-overline css-idy08m-MuiTypography-root"
            >
              eserviceCardLabel
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1ddsn86-MuiCardContent-root"
      >
        <div
          class="css-1q36rmd-MuiStack-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ax6k3r-MuiAvatar-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-7p6gym-MuiSvgIcon-root"
              data-testid="AccountBalanceIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10h3v7H4zm6.5 0h3v7h-3zM2 19h20v3H2zm15-9h3v7h-3zm-5-9L2 6v2h20V6z"
              />
            </svg>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
          >
            Agenzia per L'Italia Digitale
          </span>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1pcitua-MuiTypography-root"
        >
          !! -- CAMMELLO -- Test 18/10 [1]
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
        >
          <p
            style="display: -webkit-box; overflow: hidden;"
          >
            lorem ipsum
          </p>
        </div>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-17m1olt-MuiCardActions-root"
      >
        <div
          class="css-e53awj-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span>
              actions.inspect
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            subscribe
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that CatalogCard snapshot don't change > renders correctly with isMine true and agreement ACTIVE 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1j1g2lg-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <div
            class="css-1hci2t4-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-overline css-idy08m-MuiTypography-root"
            >
              myEserviceCardLabel
            </span>
            <span
              class="css-1k8a9y0"
            >
              requestCompleted
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1ddsn86-MuiCardContent-root"
      >
        <div
          class="css-1q36rmd-MuiStack-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ax6k3r-MuiAvatar-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-7p6gym-MuiSvgIcon-root"
              data-testid="AccountBalanceIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10h3v7H4zm6.5 0h3v7h-3zM2 19h20v3H2zm15-9h3v7h-3zm-5-9L2 6v2h20V6z"
              />
            </svg>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
          >
            Agenzia per L'Italia Digitale
          </span>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1pcitua-MuiTypography-root"
        >
          !! -- CAMMELLO -- Test 18/10 [1]
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
        >
          <p
            style="display: -webkit-box; overflow: hidden;"
          >
            lorem ipsum
          </p>
        </div>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-17m1olt-MuiCardActions-root"
      >
        <div
          class="css-e53awj-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span>
              actions.inspect
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            handleRequest
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that CatalogCard snapshot don't change > renders correctly with isMine true and hasCertifiedAttributes true 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1j1g2lg-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiCardHeader-root css-185gdzj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <div
            class="css-1hci2t4-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-overline css-idy08m-MuiTypography-root"
            >
              myEserviceCardLabel
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-1ddsn86-MuiCardContent-root"
      >
        <div
          class="css-1q36rmd-MuiStack-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-ax6k3r-MuiAvatar-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-7p6gym-MuiSvgIcon-root"
              data-testid="AccountBalanceIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10h3v7H4zm6.5 0h3v7h-3zM2 19h20v3H2zm15-9h3v7h-3zm-5-9L2 6v2h20V6z"
              />
            </svg>
          </div>
          <span
            class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
          >
            Agenzia per L'Italia Digitale
          </span>
        </div>
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1pcitua-MuiTypography-root"
        >
          !! -- CAMMELLO -- Test 18/10 [1]
        </h6>
        <div
          class="MuiTypography-root MuiTypography-body1 css-1gqyz35-MuiTypography-root"
        >
          <p
            style="display: -webkit-box; overflow: hidden;"
          >
            lorem ipsum
          </p>
        </div>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-17m1olt-MuiCardActions-root"
      >
        <div
          class="css-e53awj-MuiStack-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span>
              actions.inspect
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall css-11qr2p8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            subscribe
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
